--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dart_ui_isolate: ^1.1.1
   flutter:
     sdk: flutter
+  nanoid: ^1.0.0
   plugin_platform_interface: ^2.0.2
   synchronized: ^3.4.0
 
