--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: isolate_helper_example
-description: "Demonstrates how to use the isolate_helper plugin."
+name: pl_isolate_example
+description: "Demonstrates how to use the pl_isolate plugin."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -17,9 +17,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  isolate_helper:
+  pl_isolate:
     # When depending on this package from a real application you should use:
-    #   isolate_helper: ^x.y.z
+    #   pl_isolate: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
